more changes to css. removed flex and incorporated bootstrap

--- a/styles.css
+++ b/styles.css
@@ -5,16 +5,27 @@ body{
 #nav-brand{
     color: white;
     background-color: #4aaaa5;
+    text-align: center;
+}
+
+#navbar, #navbar1{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: bold;
 }
 
 #h1_name{
     color: white;
+    font-size: 2.5rem;
+    /* font-family: Georgia, 'Times New Roman', Times, serif; */
 }
 
 #navbar{
     background-color: #ffffff;
 }
 
+#navbar1{
+    text-align: center;
+}
 .navbar-nav{
     display: inline-block;
 }
@@ -24,9 +35,20 @@ body{
 }
 
 @media screen and (max-width: 768px) {
-    #top {
-        padding-top: 40px;
-        margin: 0 auto;        
-    }
 } 
 
+@media screen and (max-width: 575px) {
+    #nav-brand{
+        width: 100%;
+        margin: 0;
+    }
+     
+    #navbar1{
+        width: 100%;
+        margin: 0;
+    }
+
+    #cont_nav{
+        width: 100%;
+    }
+}
