--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,8 @@ body {
     height: 100%; /* Avoid the IE 10-11 `min-height` bug. */
     background: #4aaaa5;
     margin: 0;
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
     height: 100vh;
 }
 
@@ -55,9 +55,9 @@ a:hover {
 
 #back_ground{
     background-image: url("../images/concrete-texture.png");
-    /* background-color: #cccccc; */
     overflow: auto;
-    flex: 1 0 auto;
+    height: 100%;
+    /* flex: 1 0 auto; */
 }
 
 #content_area{
@@ -87,7 +87,7 @@ h1, h2, h3 {
 }
 
 h1{
-    /* font-size: 2.0em; */
+    font-size: 2.0em;
 }
 
 h2{
@@ -148,7 +148,7 @@ hr{
 
 #connect_box {
     /* width: 270px; */
-    /* min-width: 290px; */
+    min-width: 250px;
     background-color: #ffffff;
     border: #dddddd;
     /* float: right; */
@@ -167,12 +167,15 @@ hr{
 }
 
 .footer{
-    flex-shrink: 0;
-    margin-top: 5px;
-    margin-bottom: 0px;
+    position: relative;
+    width: 100%;
+    /* flex-shrink: 0; */
     bottom: 0;
-    height: 75px;
+    margin-top: 4px;
+    margin-bottom: 0px;
+    height: 50px;
     background-color: #666666;
+    line-height: 50px;
 }
 
 .footer p{
